fix scrollbar

--- a/frontend/src/styles/landing.scss
+++ b/frontend/src/styles/landing.scss
@@ -93,6 +93,7 @@
     align-items: center;
     list-style-type: none;
     overflow: hidden;
+    overflow-x:hidden;
     margin: auto 0;
     padding: 0;
     flex-direction: row;
@@ -103,15 +104,7 @@
     z-index: 900;
     overflow-x: hidden;
     text-align: center;
-    span{
-        text-align: center;
-        padding:60vw;
-        display: flex;
-        overflow: visible;
-        align-self: center;
-        align-items: center;
-    }
-     
+   
 }
 nav ul li
 {
@@ -134,21 +127,26 @@ nav ul li
 }}
 
 .sliding {
-    white-space: nowrap;
-    display: flex;
+    white-space: nowrap; 
+    position:relative;
     align-self: center;
     align-items: center;
     overflow: hidden;
     overflow-x: hidden;
-    animation: animate 18s linear infinite;
+    right:-50vw;
+    animation: animate 24s linear infinite;
+
   }
-  
+
+  span:nth-of-type(2n){
+    animation-delay:8s;
+  }
   @keyframes animate {
     0% {
-      transform: translate(0, 0);
+      transform: translate(150vw, 0);
     }
     100% {
-      transform: translate(-120vw, 0);
+      transform: translate(-150vw, 0);
     }
   }
 
